--- a/01_基础总结深入/02_数据_变量_内存3.html
+++ b/01_基础总结深入/02_数据_变量_内存3.html
@@ -11,7 +11,24 @@
   * 2个引用变量指向同一个对象,让一个引用变量指向另一个对象, 另一个引用变量还是指向原来的对象
 -->
 <script type="text/javascript">
-  
+  // 2个引用变量指向同一个对象, 通过一个引用变量修改对象内部数据, 另一个引用变量也看得见
+  var a = {
+    n: 123
+  }
+  var b = a;
+  a.n = 456;
+  console.log(b.n); //456
+
+  // 2个引用变量指向同一个对象,让一个引用变量指向另一个对象, 另一个引用变量还是指向原来的对象
+  var a = {
+    n: 123
+  }
+  var b = a;
+  a = {
+    n: 456
+  }
+  console.log(b.n);  //123
+
 </script>
 </body>
 </html>
