--- a/01_基础总结深入/02_数据_变量_内存4.html
+++ b/01_基础总结深入/02_数据_变量_内存4.html
@@ -11,6 +11,14 @@
   * 如果后一种看成是引用传递, 那就值传递和引用传递都可以有
 -->
 <script type="text/javascript">
+  function test(x) {
+    console.log(x);
+  }
+  var a = 123;
+  test(a); //值传递
+  a = {};
+  test(a); //值传递，地址值
+            //引用传递
 
 </script>
 </body>
