函数和回调函数

--- a/01_基础总结深入/05_回调函数.html
+++ b/01_基础总结深入/05_回调函数.html
@@ -47,6 +47,12 @@
 
   }
 
+
+  var i = 0 ;
+  var j = i++ + ++i + i-- - --i + ++i;
+  // 0 + 2 + 2 - 0 + 1
+  console.log(j); // 5
+
 </script>
 </body>
 </html>
