--- a/02_函数高级/01_原型与原型链/05_探索instanceof.html
+++ b/02_函数高级/01_原型与原型链/05_探索instanceof.html
@@ -15,16 +15,16 @@
   //案例1
   function Foo () {  }
   var f1 = new Foo();
-  console.log(f1 instanceof Foo);
-  console.log(f1 instanceof Object);
+  console.log(f1 instanceof Foo);  //true
+  console.log(f1 instanceof Object); //true
   
   //案例2
-  console.log(Object instanceof Function);
-  console.log(Object instanceof Object);
-  console.log(Function instanceof Object);
-  console.log(Function instanceof Function);
+  console.log(Object instanceof Function); // true
+  console.log(Object instanceof Object);  // true
+  console.log(Function instanceof Object); // true
+  console.log(Function instanceof Function); // true
   function Fn () {}
-  console.log(Object instanceof Fn);
+  console.log(Object instanceof Fn); // false
 
 </script>
 </body>
