--- a/02_函数高级/03_作用域与作用域链/04_作用域_面试题2.html
+++ b/02_函数高级/03_作用域与作用域链/04_作用域_面试题2.html
@@ -11,13 +11,13 @@
    */
 
   var fn = function () {
-    console.log(fn)
+    console.log(fn) // function () {}
   }
   fn()
 
   var obj = {
     fn2: function () {
-      console.log(fn2)
+      console.log(fn2) //fn2 is not defined
     }
   }
 
