--- a/02_函数高级/02_执行上下文与执行上下文栈/01_变量提升与函数提升.html
+++ b/02_函数高级/02_执行上下文与执行上下文栈/01_变量提升与函数提升.html
@@ -13,9 +13,19 @@
   * 通过function声明的函数, 在之前就可以直接调用
   * 值: 函数定义(对象)
 3. 问题: 变量提升和函数提升是如何产生的?
+  * 预解析、预处理
 -->
 <script type="text/javascript">
+  var a;
+  function fn() {
 
+  }
+  /****************/
+  console.log(a); //undefined
+  fn();
+  a = function () {
+
+  };
 
 </script>
 </body>
