--- a/02_函数高级/02_执行上下文与执行上下文栈/04_执行上下文栈2.html
+++ b/02_函数高级/02_执行上下文与执行上下文栈/04_执行上下文栈2.html
@@ -10,7 +10,8 @@
 2. 整个过程中产生了几个执行上下文?
 -->
 <script type="text/javascript">
-  console.log('global begin: '+ i)
+  //递归函数：在函数体里面调用自己
+  console.log('global begin: '+ i) // undefined
   var i = 1
   foo(i);
   function foo(i) {
