--- a/02_函数高级/03_作用域与作用域链/01_作用域.html
+++ b/02_函数高级/03_作用域与作用域链/01_作用域.html
@@ -18,21 +18,22 @@
 -->
 <script type="text/javascript">
   var a = 10,
-      b = 20
+      b = 20;
   function fn(x) {
     var a = 100,
       c = 300;
-    console.log('fn()', a, b, c, x)
+    console.log('fn()', a, b, c, x);
+
     function bar(x) {
       var a = 1000,
-        d = 400
-      console.log('bar()', a, b, c, d, x)
+      d = 400;
+      console.log('bar()', a, b, c, d, x);
     }
 
-    bar(100)
-    bar(200)
+    bar(100);
+    bar(200);
   }
-  fn(10)
+  fn(10);
 </script>
 </body>
 </html>
