--- a/02_函数高级/04_闭包/01_理解闭包.html
+++ b/02_函数高级/04_闭包/01_理解闭包.html
@@ -11,7 +11,7 @@
 2. 闭包到底是什么?
   * 使用chrome调试查看
   * 理解一: 闭包是嵌套的内部函数(绝大部分人)
-  * 理解二: 包含被引用变量(函数)的对象(极少数人)
+  * 理解二: 包含被引用变量(函数)的对象closure(极少数人)
   * 注意: 闭包存在于嵌套的内部函数中
 3. 产生闭包的条件?
   * 函数嵌套
@@ -19,7 +19,27 @@
   * 执行外部函数
 -->
 <script type="text/javascript">
+  /*
+  闭包怎么产生：
+    当一个嵌套的内部函数引用了嵌套的外部函数的局部变量(函数)时, 执行外部函数就产生了闭包
+  闭包产生的三个条件：
+    1. 函数嵌套
+    2. 内部函数引用外部函数局部变量
+    3. 调用外部函数
+  闭包是什么？
 
+   */
+  function fn1() {
+    debugger
+    var a = function () {
+
+    };
+    var b = 2;
+    function fn2() { //函数嵌套
+      console.log(a, b); //内部函数引用外部函数局部变量
+    }
+  }
+  fn1(); //调用外部函数
 </script>
 </body>
 </html>
