--- a/02_函数高级/04_闭包/00_引入.html
+++ b/02_函数高级/04_闭包/00_引入.html
@@ -14,6 +14,31 @@
 需求: 点击某个按钮, 提示"点击的是第n个按钮"
 -->
 <script type="text/javascript">
+  var btns = document.getElementsByTagName('button');
+
+  /*for (var i = 0; i < btns.length; i++) {
+    var btn = btns[i];
+    btn.onclick = function () {
+      alert(i + 1);
+    }
+  }*/
+
+  /*for (var i = 0; i < btns.length; i++) {
+    var btn = btns[i];
+    btn.index = i;
+    btn.onclick = function () {
+      alert(this.index + 1);
+    }
+  }*/
+
+  for (var i = 0; i < btns.length; i++) {
+    (function (i) {
+      var btn = btns[i];
+      btn.onclick = function () {
+        alert(i + 1);
+      }
+    })(i)
+  }
 
 </script>
 </body>
