--- a/02_函数高级/04_闭包/02_常见的闭包.html
+++ b/02_函数高级/04_闭包/02_常见的闭包.html
@@ -11,6 +11,31 @@
 2. 将函数作为实参传递给另一个函数调用
 -->
 <script type="text/javascript">
+  // 将函数作为另一个函数的返回值
+  /*function fn1() {
+    var a = 1;
+    function fn2() {
+      a++;
+      console.log(a);
+      // return fn3;
+    }
+    // function fn3() {
+    //   console.log(a);
+    // }
+    return fn2
+  }
+  var f = fn1();
+  f(); // 2
+  f(); // 3
+  // f()();*/
+
+  // 将函数作为实参传递给另一个函数调用
+  function delay(msg, time) {
+    setTimeout(function () {
+      alert(msg);
+    }, time);
+  }
+  delay('atguigu', 2000);
 
 </script>
 </body>
