--- a/02_函数高级/04_闭包/04_闭包的生命周期.html
+++ b/02_函数高级/04_闭包/04_闭包的生命周期.html
@@ -19,9 +19,10 @@
     }
     return fn2;
   }
-  var f = fn1();
+  var f = fn1(); // 在嵌套内部函数定义执行完时就产生了(不是在调用)
   f();
   f();
+  f = null;  //让内部函数称为垃圾对象，从而释放掉闭包
 </script>
 </body>
 </html>
