--- a/02_函数高级/04_闭包/03_闭包的作用.html
+++ b/02_函数高级/04_闭包/03_闭包的作用.html
@@ -15,6 +15,11 @@
   2. 在函数外部能直接访问函数内部的局部变量吗?
 -->
 <script type="text/javascript">
+  /*
+    闭包的作用：
+      1. 延长局部变量的生命周期
+      2. 让函数外部
+   */
   function fn1 () {
     var a = 2;
     function fn2 () {
