--- a/02_函数高级/04_闭包/06_闭包的缺点及解决.html
+++ b/02_函数高级/04_闭包/06_闭包的缺点及解决.html
@@ -14,7 +14,18 @@
   * 及时释放
 -->
 <script type="text/javascript">
-
+  function fn1 () {
+    var a = 2;
+    function fn2 () {
+      a++;
+      console.log(a);
+    }
+    return fn2;
+  }
+  var f = fn1();
+  f();
+  f();
+  f = null;
 </script>
 </body>
 </html>
