--- a/02_函数高级/04_闭包/07_面试题1.html
+++ b/02_函数高级/04_闭包/07_面试题1.html
@@ -10,7 +10,6 @@
   /*
    说说它们的输出情况
    */
-
   //代码片段一
   var name = "The Window";
   var object = {
@@ -21,20 +20,20 @@
       };
     }
   };
-  console.log();  //?
+  console.log(object.getNameFunc()());  //The Window
 
   //代码片段二
   var name2 = "The Window";
   var object2 = {
     name2: "My Object",
     getNameFunc: function () {
-      var that = this;
+      var that = this; //object
       return function () {
         return that.name2;
       };
     }
   };
-  console.log(object2.getNameFunc()()); //?
+  console.log(object2.getNameFunc()()); //My Object
 
 </script>
 </body>
