--- a/02_函数高级/04_闭包/07_面试题2.html
+++ b/02_函数高级/04_闭包/07_面试题2.html
@@ -21,13 +21,18 @@
   var a = fun(0)
   a.fun(1)
   a.fun(2)
-  a.fun(3) //undefined,?,?,?
+  a.fun(3) //undefined,0,0,0
 
-  var b = fun(0).fun(1).fun(2).fun(3) //undefined,?,?,?
+  var b = fun(0).fun(1).fun(2).fun(3) //undefined,0,1,2
+  // var b1 = func(0)   //undefined  n:0
+  // var b2 = b1.fun(1)  // 0   n:1
+  // var b3 = b2.fun(2) // 1   n: 2
+  // b3.fun(3)  // 2  n: 3
 
   var c = fun(0).fun(1)
   c.fun(2)
-  c.fun(3) //undefined,?,?,?
+  c.fun(3) //undefined,0,1,1
+
 </script>
 </body>
 </html>
