--- a/03_对象高级/01_对象创建模式/01_Object构造函数模式.html
+++ b/03_对象高级/01_对象创建模式/01_Object构造函数模式.html
@@ -15,7 +15,18 @@
   /*
   一个人: name:"Tom", age: 12
    */
+  var person = new Object();
+  person.name = 'Bob';
+  person.age = 18;
+  person.setName = function (name) {
+    this.name = name;
+  }
 
+  person.name = 'Bob';
+  person.age = 18;
+  person.setName = function (name) {
+    this.name = name;
+  }
 </script>
 </body>
 </html>
