--- a/03_对象高级/01_对象创建模式/02_对象字面量.html
+++ b/03_对象高级/01_对象创建模式/02_对象字面量.html
@@ -12,6 +12,20 @@
   * 问题: 如果创建多个对象, 有重复代码
 -->
 <script type="text/javascript">
+  var person1 = {
+    name: 'Bob',
+    age: 18,
+    setName: function (name) {
+      this.name = name;
+    }
+  }
+  var person2 = {
+    name: 'Tom',
+    age: 20,
+    setName: function (name) {
+      this.name = name;
+    }
+  }
 </script>
 </body>
 </html>
