--- a/03_对象高级/01_对象创建模式/03_工厂模式.html
+++ b/03_对象高级/01_对象创建模式/03_工厂模式.html
@@ -12,6 +12,16 @@
   * 问题: 对象没有一个具体的类型, 都是Object类型
 -->
 <script type="text/javascript">
+  function createPerson(name, age) {
+    return {
+      name: name,
+      age: age,
+      setName: function (name) {
+        this.name = name;
+      }
+    }
+  }
+  var p = createPerson('Bob', 18);
 </script>
 </body>
 </html>
