--- a/03_对象高级/01_对象创建模式/04_自定义构造函数模式.html
+++ b/03_对象高级/01_对象创建模式/04_自定义构造函数模式.html
@@ -14,6 +14,15 @@
 -->
 <script type="text/javascript">
 
+  function Person(name, age) {
+    this.name = name;
+    this.age = age;
+    this.setName = function (name) {
+      this.name = name;
+    }
+  }
+  var p1 = new Person('Bob', 18);
+
 </script>
 </body>
 </html>
