--- a/03_对象高级/02_继承模式/02_借用构造函数继承.html
+++ b/03_对象高级/02_继承模式/02_借用构造函数继承.html
@@ -15,6 +15,27 @@
   1. 在子类型构造函数中通用super()调用父类型构造函数
 -->
 <script type="text/javascript">
+  function Father(name, age) {
+    this.name = name;
+    this.age = age;
+  }
+  Father.prototype.setName = function (name) {
+    this.name = name;
+  }
+  function Child(name, age, sex) {
+    // Father.call(this, name, age);
+    this.sex = sex;
+  }
+
+  Child.prototype = new Father('Bob', 18);
+  Child.prototype.setAge = function (age) {
+    this.age = age;
+  }
+  Child.prototype.constructor = Child;
+
+  var c1 = new Child('Bob', 18, '男');
+  console.log(c1);
+
 
 </script>
 </body>
