--- a/03_对象高级/02_继承模式/03_组合继承.html
+++ b/03_对象高级/02_继承模式/03_组合继承.html
@@ -11,7 +11,27 @@
 2. 利用super()借用父类型构建函数初始化相同属性
 -->
 <script type="text/javascript">
+  function Father(name, age) {
+    this.name = name;
+    this.age = age;
+  }
+  Father.prototype.setName = function (name) {
+    this.name = name;
+  }
+  function Child(name, age, sex) {
+    Father.call(this, name, age);
+    this.sex = sex;
+  }
 
+  Child.prototype = (new Father()).__proto__;
+
+  Child.prototype.setAge = function (age) {
+    this.age = age;
+  }
+  Child.prototype.constructor = Child;
+
+  var c1 = new Child('Bob', 18, '男');
+  console.log(c1);
 </script>
 </body>
 </html>
