--- a/NodeJS/day03/public/index.html
+++ b/NodeJS/day03/public/index.html
@@ -5,7 +5,7 @@
   <title>Title</title>
 </head>
 <body>
-  <form action="http://localhost:80/" method="post">
+  <form action="http://localhost:3000/test" method="post">
     用户名： <input type="text" name="username"> <br><br>
     密码： <input type="password" name="password"> <br><br>
     <input type="submit" value="提交表单">
