--- a/ES5_6_7/study/es5/01_严格模式.html
+++ b/ES5_6_7/study/es5/01_严格模式.html
@@ -25,7 +25,7 @@
 
 <script type="text/javascript">
   'use strict'
-  //1. 禁止不用var去声明变量
+  //必须先声明再使用变量
   // username = 'sunwukong';
   /*function fn() {
     username = 'sunwukong';  //username is not defined
