--- a/ES5_6_7/study/es5/04_Array扩展.html
+++ b/ES5_6_7/study/es5/04_Array扩展.html
@@ -23,6 +23,30 @@
    5. 根据arr产生一个新数组, 返回的每个元素要大于4
    6. 输出arr所有元素累加的结果
 */
+var arr = [1, 5, 8, 6, 9, 3, 2, 6, 4, 7];
+// 1. 输出第一个6的下标
+console.log(arr.indexOf(6));  // 3
+// 2. 输出最后一个6的下标
+console.log(arr.lastIndexOf(6)); // 7
+// 3. 输出所有元素的值和下标
+arr.forEach(function (item, index) {
+  console.log(item + ' ' + index);
+})
+// 4. 根据arr产生一个新数组,要求每个元素都比原来大10
+var newArr1 = arr.map(function (item, index) {
+  return item + 10;  //必须指定返回值
+})
+console.log(newArr1);
+// 5. 根据arr产生一个新数组, 返回的每个元素要大于4
+var newArr2 = arr.filter(function (item, index) {
+  return item > 4;
+})
+console.log(newArr2);
+// 6. 输出arr所有元素累加的结果
+var result = arr.reduce(function (prev, next) {
+  return prev + next;
+})  
+console.log(result);
 
 </script>
 </body>
