--- a/ES5_6_7/study/es6/常用/04_模板字符串.html
+++ b/ES5_6_7/study/es6/常用/04_模板字符串.html
@@ -11,6 +11,13 @@
   * 变化的部分使用${xxx}定义
 -->
 <script type="text/javascript">
+  var obj = {
+    name: '吴杰',
+    age: 18,
+    info: 'xxxx""'
+  }
+  console.log('名字：' + obj.name);
+  console.log(`名字：${obj.name}  年龄：${obj.age} 'sdsads'`);
 
 </script>
 </body>
