--- a/ES5_6_7/study/es6/常用/06_箭头函数.html
+++ b/ES5_6_7/study/es6/常用/06_箭头函数.html
@@ -44,11 +44,11 @@
   }
   //没有传参，并且语句只有一条
   let fn4 = () => console.log('hello');
-  fn4();
+  console.log(fn4());
   //有一个参数，并且语句只有一条
-  let fn5 = x => console.log(x);
-  fn5(123);
-  //两个参数和两个以上，并且语句只有一条
+  let fn5 = x => x;
+  console.log(fn5(123));
+  /*//两个参数和两个以上，并且语句只有一条
   let fn6 = (x, y) => console.log(x, y);
   fn6(123, 456);
   //多条语句
@@ -60,11 +60,11 @@
 
   let fn8 = () => console.log(this);  //window
   fn8();
-  /*
+  /!*
     箭头函数的this看外层的是否有函数，
         如果有，外层函数的this就是内部箭头函数的this，
         如果没有，则this是window。
-   */
+   *!/
   let obj = {};
   function foo1() {
     let fn9 = () => console.log(this);  //window
@@ -77,9 +77,9 @@
     fn9();
   }
   foo2.call(obj);
-  /*
+  /!*
     箭头函数是静态的，和它在哪定义有关，和它在哪调用没有关系
-   */
+   *!/
   let fn10 = () => console.log(this); //window
   function foo3() {
     fn10();
@@ -112,7 +112,14 @@
       fn();
     }
   }
-  obj1.sayName('bob');
+  obj1.sayName('bob');*/
+
+  /*var flag = true
+  /!*if (flag) {
+    console.log(flag);
+  }*!/
+  if (!flag) console.log(flag);
+  else if (flag) console.log(flag);*/
 </script>
 
 </body>
