--- a/ES5_6_7/study/es6/常用/08_形参默认值.html
+++ b/ES5_6_7/study/es6/常用/08_形参默认值.html
@@ -13,7 +13,15 @@
     }
 -->
 <script type="text/javascript">
+  function Point(x = 1,y = 2) {
+    this.x = x;
+    this.y = y;
+  }
+  let p = new Point(3, 4);
+  console.log(p);
 
+  let fn = (x = 1, y = 2) => x + y;
+  console.log(fn());  //3
 </script>
 
 </body>
