--- a/ES5_6_7/study/es6/常用/09_Promise对象.html
+++ b/ES5_6_7/study/es6/常用/09_Promise对象.html
@@ -43,6 +43,24 @@
 -->
 
 <script type="text/javascript">
+  let promise = new Promise((resolve, reject) => {
+    //promise初始化状态，pending 待办，未解决的状态
+    //里面通常做一些异步操作：发送ajax请求 设置定时器
+    setTimeout(function () {
+      console.log('hello atguigu');
+      resolve(123);  //将promise对象的状态修改为fullfilled 成功的状态
+      // reject('hello atguigu');   //将promise对象的状态修改为rejected 失败的状态
+    }, 2000)
+  })
+
+  promise
+    .then((result) => {
+      //成功的回调函数
+      console.log(result);
+    }, (error) => {
+      //失败的回调函数
+      console.log(error);
+    })
 
 </script>
 
