--- a/ES5_6_7/study/es6/常用/09_Promise对象.html
+++ b/ES5_6_7/study/es6/常用/09_Promise对象.html
@@ -48,18 +48,35 @@
     //里面通常做一些异步操作：发送ajax请求 设置定时器
     setTimeout(function () {
       console.log('hello atguigu');
-      resolve(123);  //将promise对象的状态修改为fullfilled 成功的状态
-      // reject('hello atguigu');   //将promise对象的状态修改为rejected 失败的状态
+      // resolve(123);  //将promise对象的状态修改为fullfilled 成功的状态
+      reject('hello atguigu');   //将promise对象的状态修改为rejected 失败的状态
     }, 2000)
   })
 
   promise
-    .then((result) => {
+    /*.then((result) => {
       //成功的回调函数
       console.log(result);
     }, (error) => {
       //失败的回调函数
       console.log(error);
+    })*/
+    .then(result => {
+      //成功的回调函数
+      console.log(result);
+      return Promise.resolve();
+    })
+    .catch(error => {
+      //失败的回调函数
+      console.log(error);
+      return Promise.reject(error);
+    })
+
+    .then((res) => {
+      console.log('then');
+    })
+    .catch((err) => {
+      console.log(err);
     })
 
 </script>
