--- a/ES5_6_7/study/es6/常用/12_Generator函数.html
+++ b/ES5_6_7/study/es6/常用/12_Generator函数.html
@@ -43,7 +43,7 @@
     //第三次next()调用，执行43-44行代码，发现后面没有yield关键字，函数就执行完毕了~~
     console.log('函数执行完毕了~~~');
   }
-
+  //遍历器对象
   let g = generator();
   console.log(g);
   let result = g.next();
