--- a/ES5_6_7/study/es6/其它/01_字符串扩展.html
+++ b/ES5_6_7/study/es6/其它/01_字符串扩展.html
@@ -12,7 +12,12 @@
 4. repeat(count) : 重复指定次数
 -->
 <script type="text/javascript">
-
+  let str = 'hello atguigu';
+  console.log(str.includes(' '));
+  console.log(str.startsWith('hello'));
+  console.log(str.endsWith('gu'));
+  console.log(str.repeat(3));
+  console.log(str);
 </script>
 </body>
 </html>
