--- a/ES5_6_7/study/es7/ES7.html
+++ b/ES5_6_7/study/es7/ES7.html
@@ -8,10 +8,11 @@
 <!--
 1. 指数运算符(幂): **
 2. Array.prototype.includes(value) : 判断数组中是否包含指定value
-
 -->
 <script type="text/javascript">
-
+  console.log(3 ** 3); // 27
+  let arr = [2, 3];
+  console.log(arr.includes(2)); //true
 </script>
 </body>
 </html>
