--- a/ES5_6_7/study/es6/常用/13_async函数案例.html
+++ b/ES5_6_7/study/es6/常用/13_async函数案例.html
@@ -33,6 +33,7 @@
           let html = '';
           result.forEach(item => html += `<li>${item.content}</li>`);
           $list.html(html);
+          //return xxxx  //Promise.resolve(xxxx)
         }
 
         //调用async函数
