--- a/modular/work/04_AMD-RequireJS/index.html
+++ b/modular/work/04_AMD-RequireJS/index.html
@@ -5,6 +5,7 @@
   <title>requirejs</title>
 </head>
 <body>
+  <button id="btn">按钮</button>
   <script data-main="main.js" src="libs/require.js"></script>
 </body>
 </html>
