--- a/projectBuild/work/gulp_test/index.html
+++ b/projectBuild/work/gulp_test/index.html
@@ -3,8 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <link rel="stylesheet" href="css/dist.min.css">
 </head>
 <body>
-
+  <h1>hello</h1>
+  <div id="box1">
+    <p>hello gulp</p>
+  </div>
+  <div id="box2">
+    <p>hello atguigu</p>
+  </div>
+  <!--这是注释·~~~-->
+  <script type="text/javascript" src="js/dist.min.js"></script>
 </body>
 </html>
