html 图片地址的处理 请空目录

--- a/projectBuild/work/webpack_test/src/index.html
+++ b/projectBuild/work/webpack_test/src/index.html
@@ -11,6 +11,6 @@
 <div id="box2">
   <p>hello atguigu</p>
 </div>
-<script type="text/javascript" src="./build/js/built.js"></script>
+<img src="./images/1.jpg" alt="">
 </body>
 </html>
